--- a/RTutorialFiles/ConvertingFormats.Rmd
+++ b/RTutorialFiles/ConvertingFormats.Rmd
@@ -5,7 +5,7 @@ output: html_document
 
 # Creating a nexus file
 
-We'd like to make a nexus file from some linguistic data, so we can use it in programs like Mesquite and Splitstree.
+We'd like to make a nexus file from some anthropological data, so we can use it in programs like Mesquite and Splitstree. The basic question is whether there is co-evolution of roof shape and roofing materials.
 
 The easiest way to see the structure of a nexus file is to look at an example.  You can open a nexus file in a good text editor.  Here's a very simple nexus file for 5 languages, storing two variables of binary data.
 
@@ -51,30 +51,53 @@ We'd like to load some data in R, then save it to a file format like this.  For 
 
 ## Preparing data
 
-First, let's load the data from WALS, loaded from a csv file.
+First, let's load the roof shape data. If you don't have this downloaded already, the roof shape data comes from D-PLACE, but you can download it from [here](https://github.com/seannyD/IntroToRForAnthropology/raw/main/data/RoofShapeData.csv).
 
-Add this to a new script file (you'll need to change the working directory to suit your own system):
+We'll also be using a similar dataset on [roofing materials](https://d-place.org/parameters/EA083). Download the file [here](https://github.com/seannyD/IntroToRForAnthropology/raw/main/data/RoofingMaterials.csv)
 
-```{r}
-
-setwd("~/Documents/Teaching/JenaSpringSchool/org/spring-school/IntroToR")
-
-d <- read.csv("data/WALS_WordOrder.csv", stringsAsFactors = F)
-glottoData <- read.csv("data/Glottolog_Data.csv", stringsAsFactors = F)
-d2 <- merge(d, glottoData, by.x='glottocode', by.y='glotto.code')
-
-```
-
-And let's extract from that just the data on languages from the Atlantic Congo family.  To make things simple, we'll just look at langauges which have either SVO or SOV and either Prepostions or Postpositions (so the variables are binary).
+Add this to a new script file (you may need to set the working directory):
 
 ```{r}
+# Load data
+d <- read.csv("../data/RoofShapeData.csv", stringsAsFactors = F)
+roofMat = read.csv("../data/RoofingMaterials.csv",stringsAsFactors = F)
 
-# Load data for Atlantic Congo
-data = d2[d2$glotto.family=="Atlantic-Congo",]
-# use only binary categories
-data = data[data$BasicWordOrder %in% c("SVO","SOV"), ]
-data = data[data$AdpositionOrder %in% c("Prepositions","Postpositions"), ]
+# roof shape variable for clarity
+d$roofShape = d$code_label
+
+# Add roof material data to d
+d$roofMaterial = roofMat[match(d$society_id,roofMat$society_id),]$code_label
+
+# Make binary variables
+d$flat_roof
 ```
+
+
+Let's quickly visualise the raw data. The 'trees' below are just clusters in the raw data - these will be heavily skewed by the phylogentic signal, but it's at least an easy way to visualise the raw data:
+
+```{r}
+heatmap(table(d$roofMaterial,d$roofShape),cexCol = 0.7)
+```
+
+For this analysis, we'll be concentrating on data from societis that speak languages from the Afro-Asiatic family.  To make things simple, we'll look at whether societies have a flat roof, and whether they use earth turf, grass or thatch compared to some other material (let's say we have a theoretical reason to make this category). It's possible to do phylogenetic analyses with more than just binary categories, and there are probably more sensible categories, but for illustration this will serve.
+
+```{r}
+# Select only Atlantic Congo data
+data = d[d$language_family=="Afro-Asiatic",]
+# Make boolean variables
+data$flatRoof = data$roofShape=="Flat"
+# Plant roof is true if made from earth, turf, grass, leaves or thatch
+data$plantRoof = data$roofMaterial=="Earth or turf" |
+    data$roofMaterial=="Grass, leaves or thatch"
+```
+
+In this case, some langauges are represented by multiple societies. We'll ignore that for now and just select one society per language
+
+```{r}
+data = data[!duplicated(data$language_glottocode),]
+```
+
+
 
 ## Calculating specific parts
 
@@ -87,11 +110,11 @@ The specific parts are:
 -  The list of taxa names
 -  The character data
 
-We'll use the iso code to identify each language, and we'll the character data is just the two linguistic variables.
+We'll use the glotto code to identify each language, and we'll the character data is just the two linguistic variables.
 
 ```{r}
-taxlabels = data$iso_code
-characterData = data[,c("BasicWordOrder","AdpositionOrder")]
+taxlabels = data$language_glottocode
+characterData = data[,c("flatRoof","plantRoof")]
 
 ```
 
@@ -99,7 +122,6 @@ We can now work out the values of NTAX and NCHAR:
 
 ```{r}
 numTax = nrow(characterData)
-  
 numChar = ncol(characterData)
 ```
 
@@ -113,46 +135,20 @@ Let's take a look at the character data:
 head(characterData)
 ```
 
-This isn't quite right - the data should be binary.  We need a way of converting this into 1s and 0s.
+This isn't quite right - the data should be binary.  We need a way of converting this into 1s and 0s. Since the data is boolean, we can just use `as.numeric`. Otherwise, you'll need to convert to a factor first, then to a numeric (and then maybe take 1 away).
 
-One way to do this is to convert the values into a factor, then convert the factor into a number.  Let's try this out with a little experiment:
-
-```{r}
-x = c("Cake","Pie","Pie","Cake")
-x
-factor(x)
-as.numeric(factor(x))
+```{r eval=F}
+characterData$flatRoof = as.numeric(characterData$flatRoof)
+characterData$plantRoof = as.numeric(characterData$plantRoof)
 ```
-
-This isn't quite right either - it's a list of 1s and 2s, so we need to subtract 1.
-
-```{r}
-as.numeric(factor(x)) - 1
-```
-
-This is a useful tool, so let's make our own custom function to convert data to binary:
-
-```{r}
-convertToBinary = function(x){
-  return(as.numeric(as.factor(x))-1)
-}
-```
-
-Let's put that at the top of our script file, and run it so that it's stored in the memory.  Now we can try it out on a set of our data:
-
-```{r}
-head(convertToBinary(characterData$AdpositionOrder))
-```
-
-That works!  
 
 ## Applying a function to all columns
 
-Now we need to convert every column in *characterData* into a binary format.  We could do this with a `for` loop:
+The method above converts each column to a binary number. This works fine for just two variables. But if we had lots of characters, then we'd need a more efficient system. We could do this with a `for` loop:
 
 ```{r eval=F}
 for(i in 1:ncol(characterData)){
-  characterData[,i] <-  convertToBinary(characterData[,i])
+  characterData[,i] <-  as.numeric(characterData[,i])
 }
 ```
 
@@ -164,7 +160,7 @@ The function `apply` takes a matrix or data frame and applies a function to eith
 
 ```{r}
 # Make a matrix with some numbers in
-x = table(characterData$BasicWordOrder, characterData$AdpositionOrder)
+x = table(characterData$flatRoof, characterData$plantRoof)
 x
 ```
 
@@ -180,7 +176,7 @@ apply(x, 2, sum)
 So, we could convert each column in *characterData* to binary using this code:
 
 ```{r}
-characterData.binary = apply(characterData, 2, convertToBinary)
+characterData.binary = apply(characterData, 2, as.numeric)
 ```
 
 Let's check it worked:
@@ -205,7 +201,7 @@ Let's look at the TAXLABELS section of the nexus file again:
     	Manx
     ;
 
-We need a string with each language name on a different line.  Recall that the language names in our WALS data are iso codes:
+We need a string with each language name on a different line.  Recall that the language names in our WALS data are glotto codes:
 
 ```{r}
 head(taxlabels)
@@ -242,7 +238,9 @@ Let's look at the format of the character block:
     
     ;
 
-Each line starts with the taxon name, then the list of characters comes.  We can make a data frame that looks like this by combining the *taxlabels* variable with the *characterData* data frame, using `cbind` (which combines things by column):
+Each line starts with the taxon name, then the list of characters comes next.  **Note that for some programs, there should be no spaces between the character states**. 
+
+We can make a data frame that looks like this by combining the *taxlabels* variable with the *characterData* data frame, using `cbind` (which combines things by column):
 
 ```{r}
 characterData.binary.withNames = cbind(taxlabels,characterData.binary)
@@ -260,10 +258,9 @@ Now we need to do two things:
 Here's my solution:
 
 ```{r}
-combineRows = apply(characterData.binary.withNames, 
-      1, paste, collapse=' ')
-characterData.binary.string = 
-  paste(combineRows,collapse='\n')
+combineRows = apply(characterData.binary.withNames, 1,
+                    paste, collapse=' ')
+characterData.binary.string = paste(combineRows,collapse='\n')
 ```
 
 
@@ -317,7 +314,7 @@ nexus_template =
 Now all we need to do is replace "ntax_here" with the variable *numTax* etc.  To do this we can use the function `gsub` which substitutes (or "replaces"") one string with another:
 
 ```{r}
-# change 's' to 'k' in the string 'snow':
+# change all 's' to 'k' in the string 'snow':
 gsub("s", "k", "snow")
 ```
 
@@ -336,7 +333,7 @@ So, we just need to copy the template text, then replace the placeholders with t
 The final step is to write this to a file.  We can use the function `cat`:
 
 ```{r eval=F}
-  filename = "data/Atlantic-Congo.nex"
+  filename = "data/Afro-Asiatic.nex"
   cat(nex, file=filename)
   
 ```
@@ -366,8 +363,6 @@ Here's my code.  My function takes three variables:  the list of languages, the 
 
 
 ```{r eval=F}
-setwd("~/Documents/Teaching/JenaSpringSchool/org/spring-school/IntroToR")
-  
 ############  
 # PARAMETERS
 
@@ -402,6 +397,7 @@ setwd("~/Documents/Teaching/JenaSpringSchool/org/spring-school/IntroToR")
 # FUNCTIONS 
   
 # Function to convert a vector to a binary vector
+# This will work for character, factor and boolean variables
 convertToBinary = function(x){
   return(as.numeric(as.factor(x))-1)
 }
@@ -444,27 +440,35 @@ makeNexusFile = function(taxlabels, characterData, filename){
 #############
 # DATA
 
-# Load the WALS data
-d <- read.csv("data/WALS_WordOrder.csv", stringsAsFactors = F)
-glottoData <- read.csv("data/Glottolog_Data.csv", stringsAsFactors = F)
-d2 <- merge(d, glottoData, by.x='glottocode', by.y='glotto.code')
+# Load the data
+d <- read.csv("../data/RoofShapeData.csv", stringsAsFactors = F)
+roofMat = read.csv("../data/RoofingMaterials.csv",stringsAsFactors = F)
 
-# Load data for Atlantic Congo
-data = d2[d2$glotto.family=="Atlantic-Congo",]
-# use only binary categories
-data = data[data$BasicWordOrder %in% c("SVO","SOV"), ]
-data = data[data$AdpositionOrder %in% c("Prepositions","Postpositions"), ]
+# roof shape variable for clarity
+d$roofShape = d$code_label
 
+# Add roof material data to d
+d$roofMaterial = roofMat[match(d$society_id,roofMat$society_id),]$code_label
+
+# Select only Afro-Asiatic languages
+data = d[d$language_family=="Afro-Asiatic",]
+# Make boolean variables
+data$flatRoof = data$roofShape=="Flat"
+# Plant roof is true if made from earth, turf, grass, leaves or thatch
+data$plantRoof = data$roofMaterial=="Earth or turf" |
+    data$roofMaterial=="Grass, leaves or thatch"
+# Ignore duplicated data
+data = data[!duplicated(data$language_glottocode),]
 
 # Make variables for the function:
 # Taxon labels
-taxlabels = data$iso_code
+taxlabels = data$language_glottocode
 # Character data (data frame)
-characterData = data[,c("BasicWordOrder","AdpositionOrder")]
+characterData = data[,c("flatRoof","plantRoof")]
 
 
 # Call our function to make the nexus file
-makeNexusFile(taxlabels, characterData, "data/Atlantic-Congo.nex")
+makeNexusFile(taxlabels, characterData, "../data/Afro-Asiatic.nex")
 
 
 ```
@@ -485,50 +489,49 @@ source("makeNexusFileFunctions.R")
 # DATA
 
 # Load the WALS data
-d <- read.csv("data/WALS_WordOrder.csv", stringsAsFactors = F)
-glottoData <- read.csv("data/Glottolog_Data.csv", stringsAsFactors = F)
-d2 <- merge(d, glottoData, by.x='glottocode', by.y='glotto.code')
+# Load the data
+d <- read.csv("../data/RoofShapeData.csv", stringsAsFactors = F)
+roofMat = read.csv("../data/RoofingMaterials.csv",stringsAsFactors = F)
+
+# roof shape variable for clarity
+d$roofShape = d$code_label
+
+# Add roof material data to d
+d$roofMaterial = roofMat[match(d$society_id,roofMat$society_id),]$code_label
+
+# Make boolean variables
+data$flatRoof = data$roofShape=="Flat"
+# Plant roof is true if made from earth, turf, grass, leaves or thatch
+data$plantRoof = data$roofMaterial=="Earth or turf" |
+    data$roofMaterial=="Grass, leaves or thatch"
+# Ignore duplicated data
+data = data[!duplicated(data$language_glottocode),]
 
 ###############
 # Make a nexus file for Atlantic Congo
-
-# Load data for Atlantic Congo
-data = d2[d2$glotto.family=="Atlantic-Congo",]
-# use only binary categories
-data = data[data$BasicWordOrder %in% c("SVO","SOV"), ]
-data = data[data$AdpositionOrder %in% c("Prepositions","Postpositions"), ]
-
-
+data = d[d$language_family=="Atlantic-Congo",]
 # Make variables for the function:
 # Taxon labels
 taxlabels = data$iso_code
 # Character data (data frame)
-characterData = data[,c("BasicWordOrder","AdpositionOrder")]
-
-
+characterData = data[,c("flatRoof","plantRoof")]
 # Call our function to make the nexus file
-makeNexusFile(taxlabels, characterData, "data/Atlantic-Congo.nex")
+makeNexusFile(taxlabels, characterData,"../data/Atlantic-Congo.nex")
 
 ###############
 # Do the same for Uto-Aztecan
 
-# Load data for Uto-Aztecan
-data = d2[d2$glotto.family=="Uto-Aztecan",]
-# use only binary categories
-data = data[data$BasicWordOrder %in% c("SVO","SOV"), ]
-data = data[data$AdpositionOrder %in% c("Prepositions","Postpositions"), ]
-
-
-# Make variables for the function:
-# Taxon labels
+data = d[d$language_family=="Uto-Aztecano",]
 taxlabels = data$iso_code
-# Character data (data frame)
-characterData = data[,c("BasicWordOrder","AdpositionOrder")]
+characterData = data[,c("flatRoof","plantRoof")]
+makeNexusFile(taxlabels, characterData,"../data/Uto-Aztecano.nex")
 
-
-# Call our function to make the nexus file
-makeNexusFile(taxlabels, characterData, "data/Uto-Aztecan.nex")
-
+####
+# Do the same for Afro-Asiatic
+data = d[d$language_family=="Afro-Asiatic",]
+taxlabels = data$iso_code
+characterData = data[,c("flatRoof","plantRoof")]
+makeNexusFile(taxlabels, characterData,"../data/Afro-Asiatic.nex")
 
 ```
 
