--- a/RTutorialFiles/IntroToR_4.Rmd
+++ b/RTutorialFiles/IntroToR_4.Rmd
@@ -21,72 +21,100 @@ In part 3, we learned:
 -  How to index a data frame to select specific rows (e.g. `d[1:3, ]`).
 -  How to index a specific column using the `$` operator.
 -  How to create new variables in a data frame.
--  How to combine data from different sources using ID names, the `match` function and the `merge` function.
+-  How to combine data from different sources using ID names, the `match` function or the `merge` function.
 
 There's a "cheatsheet" of all the commands we use in this course [here](../RCheatSheet.pdf).
 
 # Basic stats
-In the last section, we used a database of word orders.  We'll use that again here. Make a new R script in your **analysis** folder and copy this code in:
+In the last section, we used a database of roof shape and rainfall data.  We'll use that again here. Make a new R script in your **analysis** folder and copy this code in:
 
 ```{r}
-setwd("~/Documents/Teaching/CARDIFF/RCourse/IntroToR/analysis")
-d <- read.csv("../data/WALS_WordOrder.csv", stringsAsFactors = F)
-glottoData <- read.csv("../data/Glottolog_Data.csv", stringsAsFactors = F)
-d2 <- merge(d, glottoData, by.x='glottocode', by.y='glotto.code')
+# Remember to set your working directory!
+# setwd( ... )
+
+# Load data
+d <- read.csv("../data/RoofShapeData.csv", stringsAsFactors = F)
+rainfallData <- read.csv("../data/RainfallData_onlyComplete.csv", stringsAsFactors = F)
+
+# Add the rainfall data into the main data source
+d$rainfall <- rainfallData[match(d$society_id, rainfallData$society_id) , ]$code
 ```
 
-Run these lines to check that they work.
+At the moment, the variable for roof shape is called `code_label`, which isn't a very helpful label, and referring to it will make our code less clear. Let's make a new variable called `roofShape` that is just a copy of `code_label`. Add this to your script:
 
-The data frame `d2` now includes variables **latitude** and **family**.
+```{r}
+d$roofShape <- d$code_label
+```
+
+Run your script so far to check that they work.
+
+The data frame `d` now includes the variables **rainfall** and **roofShape**.
 
 ## Mean, standard deviation, minimum and maximum
 
-What is the mean latitude of languages? (Ok, this isn't very interesting, but the point here is to get some experience working with numeric data)
+When we have a lot of data, it's hard to view it all at once. Instead, we can use bits of programming to help us understand the range and distribution.  For example, what is the mean rainfall in the data?
 
 The function `mean` takes a numeric vector and returns the mean (average).  Other simple functions include `sd`, `max` and `min`:
 
 ```{r}
-mean(d2$latitude)
-sd(d2$latitude)
-max(d2$latitude)
-min(d2$latitude)
+mean(d$rainfall)
+sd(d$rainfall)
+max(d$rainfall)
+min(d$rainfall)
 ```
 
-Most languages are within about 20 degress of the 10th parallel!  
+The values are in mean ml/m2/month (the average millileters of water falling per meter squared per month). You can see D-PLACE's visualisation [here](https://d-place.org/parameters/MonthlyMeanPrecipitation#1/30/152)
 
 ## Basic statistics
 
-I have a hypothesis that cultures in colder climates need to huddle together for warmth, so there are more people around, and thus it's easy to confuse who is being talked about.  This should promote SOV order.  In hot places, this isn't so important, so the opposite VSO should be more frequent.
-
-I predict that the mean latitude of SOV should be greater than the mean latitude of VOS.
-
-To test this, I make two variables:  one of latitudes for SOV languages and one for latitude for VOS languages.  I then pass these two to the function `t.test` which runs a two-sample t-test:
+We want to test the hypothesis that roof shape differs by amount of rainfall. Let's remind ourselves of the categories of roof shape:
 
 ```{r}
-
-SOV.latitude = d2[d2$BasicWordOrder=="SOV",]$latitude
-VOS.latitude = d2[d2$BasicWordOrder=="VOS",]$latitude
-
-t.test(SOV.latitude, VOS.latitude)
+table(d$roofShape)
 ```
 
-The output to the conslode has a lot of statistics, including the pvalue and t score, and mean of each group.  We can also assign the result to a variable, from which we can access individual parts of the results.
+We might predict that flat rooves would be associated with lower rainfall compared to other roof types, because they are less good at draining water.
 
-```{r}
-tResult <- t.test(SOV.latitude, VOS.latitude)
-tResult$statistic
-tResult$p.value
+To test this we first need a variable in the data frame `d` that separates flat rooves from other types. 
+
+> **Task**: Add a line to your script to make a variable in `d` named `flatRoof` that is TRUE if the roof type is "Flat" and FALSE otherwise.
+
+```{r include=F}
+d$flatRoof = d$roofShape == "Flat"
 ```
 
+> **Task**: Now sub-set the data using this variable so that you can get the mean precipitation of societies with flat rooves and societies with rooves of other shapes.
 
-My hypothesis is correct and I have changed the course of linguistics.
+```{r include=F}
+# Mean for flat rooves
+mean(d[d$flatRoof==TRUE,]$rainfall)
+# Mean for non-flat rooves
+mean(d[d$flatRoof==FALSE,]$rainfall)
+```
 
-To go further, I test whether latitude is predicted more widely by basic word order or adposition.  I use a *linear model* using `lm`.  This takes a *function* as an argument, alongside a data frame of data.
-
-A function has a dependent variable first, followed by a tilde `~`, then a list of dependent variables seperated by `+`.  All variables should be present in the data frame d2:
+Ok, so the mean rainfall on flat rooves is about half that on other roof types. Let's run a very basic statistical test. `t.test` is a function which runs a two-sample t-test. It takes two arguments. The first is a *formula*, and the second is the source of data. A formula a dependent variable first (the measure we're interested in comparing), followed by a tilde `~` (on a keyboard usually found to the left of the '1' or to the right of the left-hand shift key),  and the right is the variable that defines the two groups we want to test. Like this:
 
 ```{r}
-model1 = lm(latitude ~ BasicWordOrder + AdpositionOrder, data=d2)
+t.test(rainfall ~ flatRoof, data = d)
+```
+
+(note that 'data' is an optional argument, so we have to name it in the code)
+
+The output to the conslode has a lot of statistics, including the pvalue and t score, and mean of each group.  The p-value is very small ("< 2.2e-16" means less that 2 multiplied by 10 to the power of minus 16), suggesting that the difference is significant.
+
+Hooray, we will be famous! Of course, we need to do all the proper statistical checks to be able to interpret this output meaningfully (are the samples normally distributed, large enough, equal variance etc.). We can do that with similar code, too. My aim here is just to show you how the functions work.
+
+More importantly for this course, we might not be controlling for other explanations. For example, these data points are not statistically independent: they belong to societies that are related historically. So a t-test might not be a fair statistic. To go further, we can start using regression models which can (eventually) let us take into account some of this historical relationship with multi-level modelling or phylogenetics. 
+
+Below I apply a very simple *linear model* using `lm`. This function takes two arguments: a *formula* of the model we want to run, and a data frame.
+
+The formula is like the one for `t.test`, but we can add extra independent variables seperated by a `+`. Let's say that we want 
+A function has a dependent variable first, followed by a tilde `~`, then a list of dependent variables seperated by `+`.  All the variables in the formula should exist in the data frame we give as the second argument.
+
+Let's say, for some reason, we think that we should control for the focal year (maybe the planet is getting wetter over time). We'd use this model:
+
+```{r}
+model1 = lm(rainfall ~ flatRoof + focal_year, data=d)
 ```
 
 The `summary` function gives us a table of parameter estimates, t-values and p-values.
@@ -95,37 +123,43 @@ The `summary` function gives us a table of parameter estimates, t-values and p-v
 summary(model1)
 ```
 
-No need to worry about the theory now, just the basic idea:  You can apply regression or other statistical tests to a set of data, and assign the results to a variable.  That variable (`model1` above) now stores the output of the statistical test.
+Add these lines to your script and run the model to see the results.
+
+No need to worry about the statistical theory now, just the basic idea:  You can apply regression or other statistical tests to a set of data, and assign the results to a variable.  That variable (`model1` above) now stores the output of the statistical test. 
 
 
 ## tapply
 
-Which language family has the greatest spread in latitude?
+`tapply` is another powerful command in R. We can use it to get quick answers such as: Which group of societies (defined by language family) experiences the greatest average rainfall?
 
-For this we need to use `tapply`, which takes a vector of objects, groups the objects according to a second vector, then applies a function to each group. 
+`tapply`, takes a vector of objects, groups the objects according to a second vector, then applies a function to each group.
 
-For example, this code works out the standard deviation of languages within each family.  The first argument is what we want to process, the second argument defines how we want to group the data, the thrid argument is the funciton we want to apply (without brackets).  
+For example, we might want to work out the *standard deviation* of rainfall within each family (the average distance of each society from the mean for their family: larger standard deviations indicate more variation within the family). 
+
+The function `sd()` works out the standard deviation of a vector of numbers, but we want to do this within each fmaily. We can do this using `tapply`.  In the code below, the first argument is what we want to process, the second argument defines how we want to group the data, the thrid argument is the funciton we want to apply (without brackets). `sd` is the function that gives us the standard deviation:
 
 ```{r}
-langFamLatitudeSD <- tapply(d2$latitude, d2$glotto.family, sd)
+rainfallByLangFam.SD <- tapply(d$rainfall, d$language_family, sd)
 ```
+
+(The '.' in the variable name is not special code, it's just part of the label. It just helps us understand what the variable represents and contrasts it with some other variables below)
 
 We then sort the data using `sort` (in decreasing order) and show the first few results using `head`.
 
 ```{r}
-langFamLatitudeSD.sorted <- sort(langFamLatitudeSD, decreasing = TRUE)
-head(langFamLatitudeSD.sorted)
+rainfallByLangFam.SD.sorted <- sort(rainfallByLangFam.SD, decreasing = TRUE)
+head(rainfallByLangFam.SD.sorted)
 ```
 
-`r names(langFamLatitudeSD.sorted)[1]` has the highest standard deviation of languages by latitude!
+`r names(rainfallByLangFam.SD.sorted)[1]` has the highest standard deviation of rainfall!
 
-> **Task**:  Which basic word order type has the higest mean latitude?
+> **Task**:  Which basic word order type has the higest mean rainfall? Add this to your script
 
 ## Custom functions
 
-Which language family has the largest *range* in latitude?
+What do we do when we can't find a function that does what we want? This is an optional section on custom functions. 
 
-To answer this, we need to know the difference between the maximum and minimum latitude for each family.  There's no simple function that can calculate this, but we can make our own.
+Say we want to find out language family has the largest *range* in rainfall (difference between maximum and minimum). To answer this, we need to know the difference between the maximum and minimum rainfall for each family.  There's no built-in function that can calculate this, but we can make our own.
 
 First, how would be calculate the range?  Given the list of numbers below, we can work out the maximum and minimum value, then subtract one from the other:
 
@@ -133,7 +167,6 @@ First, how would be calculate the range?  Given the list of numbers below, we ca
 x <- c(1,4,6,2,99,2)
 max(x) - min(x)
 ```
-
 
 Functions in R are defined similarly to other objects.  Below we create a function called `rangeDiff` which takes one argument (a list of numbers) and returns one number (the range of the numbers).
 
@@ -161,65 +194,68 @@ rangeDiff(lotteryNums)
 Now we can use `rangeDiff` to work out the range for each language family:
 
 ```{r}
-langFamLatitudeRange <- tapply(d2$latitude, d2$glotto.family, rangeDiff)
-langFamLatitudeRange.sorted <- sort(langFamLatitudeRange, decreasing = TRUE)
-head(langFamLatitudeRange.sorted)
+rainByLangFam.Range <- tapply(d$rainfall, d$language_family, rangeDiff)
+rainByLangFam.Range.sorted <- sort(rainByLangFam.Range, decreasing = TRUE)
+head(rainByLangFam.Range.sorted)
 ```
 
-`r names(langFamLatitudeRange.sorted)[1]` has the largest range in languages by latitude!
-
-
+`r names(rainByLangFam.Range.sorted)[1]` has the largest range in rainfall!
 
 
 # Making plots
 
-Plots are made using functions, too.  The most basic function is `plot`, which just makes an x-by-y plot.
+R is great at visualising data to help us figure out what's going on. 
 
-```{r}
-plot(d2$longitude, d2$latitude)
+The most basic function is `plot`, which just makes an x-by-y plot.
+
+Let's plot the rainfall by focal year (no particular reason to do this except these are the two numeric values in the data)
+
+```{r eval=F}
+plot(d$focal_year, d$rainfall)
 ```
 
+Or the same outcome, but using a formula:
+
+```{r}
+plot(rainfall ~ focal_year, data = d)
+```
+
+Hmm. There are a few earlier societies coded with very low rainfall. Let's investigate that further.
 
 `hist` is a function which produces a histogram:
 
 ```{r}
-hist(d2$latitude)
+hist(d$rainfall)
 ```
 
-The `maps` package helps plot maps:
+We can see that the distribution of rainfall is centered around 100,000 ml/m2/month, and is slightly right-skewed.
+
+`boxplot` makes a box plot. This shows the mean and range of a particular variable for several categories of obervations. For example, here's a boxplot of rainfall for the three largest language families:
 
 ```{r}
-library(maps)
-map()
+# Make a data frame with just the data we want:
+bigFamilies = c("Atlantic-Congo","Afro-Asiatic","Austronesian")
+dx = d[d$language_family %in% bigFamilies,]
+# Make boxplot
+boxplot(rainfall ~ language_family, data = dx)
 ```
 
-(if the code doesn't work, make sure you've installed the 'maps' package by calling `install.packages("maps")`)
-
-This produces a map of the world and displays it in the plot window.  We can add stuff on top with functions like `points` and `abline`:
-
-```{r}
-# draw a map of the world
-map() 
-# add locations of languages
-points(d2$longitude, d2$latitude)
-# add a horizontal line at the equator
-abline(h = 0, col = 2)
-```
+> **Task**:  Make a boxplot showing the mean rainfall for each type of roof shape. There are lots of types, which makes the legend difficult to read. Can you make a boxplot for just the top 4 most common roof shape types?
 
 There are many other types of plot.  The easiest way to find a recipie for making a plot is to use a gallery ([like this one](http://www.r-graph-gallery.com/)).
 
-## Colours
-
-Note the two extra arguments in abline.  The first states that the line should be horizontal, at position 0 on the y axis, and the second indicates the colour that the line should be.
-
-Colours in R can be specified using:
-
-* Numbers referring to the default *palette*, 1 = black, 2 = red, 3 = green etc.
-* A character string of basic colour names
-* A hex or RGB value, usually produced using a helpful function like `rainbow`, `heat.colors` or the `RColorBrewer` package.
-
 
 ## Writing plots to files
+
+In the "Plots" window, there's an "Export" button that lets you export the plot to a png or pdf file on your computer. You can then use this file with other programs like Word or Latex. The "Export" button is very useful, but we also want to be able to create files using code. Why? A few reasons:
+
+-  The "Export" button needs you to specify the size of the plot. This might differ between runs.
+-  You might need to export a plot at a larger size/resolution than the "Plots" window, which is tricky.
+-  You might need to export to a particular file type that the Plots window doesn't support (e.g. eps).
+-  We want the script to reproduce our analysis with as little input from us as possible. That is, we want to *externalise* all the steps we take to make our plots. Remembering to click extra buttons (and which size, where to save etc.) increases the number of things we have to store in our heads.
+-  We might want to make sure that the file is saved to a specific location. If you're using a program like Latex, you can link images so that any update to the image file is automatically included in your manuscript. This makes it easier to make small changes further down the road.
+
+So. How do we save a plot using code?
 
 You can write plots to a pdf using the function `pdf`.  Add the `pdf` funciton before the first plotting command, then `dev.off()` to stop writing to the file.
 
@@ -238,7 +274,7 @@ pdf(file="../results/myMap.pdf", width= 7, height = 7)
 dev.off()
 ```
 
-
+Other functions for different file types are available. Many of them [are covered here](https://r-coder.com/save-plot-r/).
 
 
 --------
